ikubernetes_1.13.1/user-kubernetes/ingress-nginx/base-fqdn-ingress-sources.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-fqdn
spec:
  rules:
  - hosts: www.chuan.com
    http:
      paths:
      - backend:
        serviceName: www-service
        servicePort: 80
  - hosts: web.chuan.com
    http:
      paths:
      - backend:
        serviceName: web-service
        servicePort: 80
